--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Tabs Project</title>
+    <title>Utkarsh Jha</title>
 </head>
 <body>
 
